# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml
gendiff/: ast_builder.py  constants.py  generator.py  input_parser.py
gendiff-package/scripts/: gendiff.py
gendiff/formatters/: __init__.py  json.py
gendiff/scripts/: gendiff.py
tests/: test_json_diff.py  test_yaml_diff.py
tests/fixtures/: complex_after.json  complex_before.json
