[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ilya Malashenko <ilya.malashenko.developer@gmail.com>"]
packages = [
	{include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
